--- a/tmpl/links.tmpl
+++ b/tmpl/links.tmpl
@@ -9,15 +9,25 @@
 <li><a  class="extlink" href="http://forecast.weather.gov/MapClick.php?lat=41.556996&lon=-83.62715700000001&site=all&smap=1&searchresult=Perrysburg%2C%20OH%2C%20USA#.Ub-duedwqSo">Toledo Executive Airport</a></li>
 <li><a  class="extlink" href="http://forecast.weather.gov/MapClick.php?lat=41.6639383&lon=-83.55521199999998&site=all&smap=1&searchresult=Toledo%2C%20OH%2C%20USA#.Ub-dKOdwqSq">Toledo Suburban Airport</a></li>
 <li><a  class="extlink" href="http://www.weather.gov/view/validProds.php?prod=LSR&amp;node=KCLE">Local Storm Report</a></li>
-<li><a  class="extlink" href="http://radar.weather.gov/radar.php?product=N1P&amp;rid=iwx&amp;loop=yes">Radar Estimated Rainfall Amounts</a></li>
+<li><a  class="extlink" href="http://radar.weather.gov/radar.php?rid=cle&product=NTP&overlay=11101111&loop=no">Radar Esstimated Rainfall Amounts</a></li>
 </ul>
-
+   
 <p><strong><ins>Wunderground</ins></strong></p>
 
 <ul>
-<li><a  class="extlink"  class="extlink"  class="extlink" href="http://www.wunderground.com/cgi-bin/findweather/getForecast?query=tol">Toledo Express Airport</a></li>
-<li><a  class="extlink"  class="extlink"  class="extlink" href="http://www.wunderground.com/US/OH/Toledo/KTDZ.html">Toledo Metcalf Airport</a></li>
-<li><a  class="extlink"  class="extlink"  class="extlink" href="http://www.wunderground.com/severe.asp?region=mw&amp;setprefs.0.key=SVRMAP&amp;setprefs.0.val=mw%23gotoMap">Midwest Severe Weather Map</a></li>
+<li><a  class="extlink" href="http://www.wunderground.com/cgi-bin/findweather/getForecast?query=tol">Toledo Express Airport</a></li>
+<li><a  class="extlink" href="http://www.wunderground.com/US/OH/Toledo/KTDZ.html">Toledo Metcalf Airport</a></li>
+<li><a  class="extlink" href="http://www.wunderground.com/severe.asp?region=mw&amp;setprefs.0.key=SVRMAP&amp;setprefs.0.val=mw%23gotoMap">Midwest Severe Weather Map</a></li>
+</ul>
+
+<p><strong><ins>Forecast.io</ins></strong></p>
+
+<ul>
+<li><a  class="extlink" href="http://www.forecast.io">forecast.io</a></li>
+<li><a  class="extlink" href="http://www.forecast.io/lines">forecast.io/lines</a></li>
+<li><a  class="extlink" href="http://blog.forecast.io">blog.forecast.io</a></li>
+<li><a  class="extlink" href="https://developer.forecast.io">developer.forecast.io</a></li>
+<li><a  class="extlink" href="http://darkskyapp.com">Dark Sky iOS App</a></li>
 </ul>
 
 <p><strong><ins>Etc</ins></strong></p>
