--- a/tmpl/moreradarsmaps.tmpl
+++ b/tmpl/moreradarsmaps.tmpl
@@ -3,6 +3,13 @@
 <div data-role="collapsible-set" data-inset="false">
 
 <div data-role="collapsible" data-collapsed="false">
+<h3>Hi Def Radar</h3>
+<p>
+<img src="http://radblast-aws.wunderground.com/cgi-bin/radar/WUNIDS_map?station=DTW&brand=wui&num=6&delay=15&type=TR0&frame=0&scale=1.000&noclutter=0&t=1373479846&lat=0&lon=0&label=you&showstorms=0&map.x=400&map.y=240&centerx=400&centery=240&transx=0&transy=0&showlabels=1&severe=0&rainsnow=0&lightning=0&smooth=0">
+</p>
+</div>
+
+<div data-role="collapsible">
 <h3>Local Radar</h3>
 <p>
 <img src="http://radblast-mi.wunderground.com/cgi-bin/radar/WUNIDS_map?station=DTX&brand=wui&num=6&delay=15&type=N0R&frame=0&scale=0.750&noclutter=0&t=1305206220&lat=41.58666611&lon=-83.80777740&label=Toledo+Express%2C+OH&showstorms=0&map.x=400&map.y=240&centerx=454&centery=163&transx=54&transy=-77&showlabels=1&severe=1&rainsnow=0&lightning=0&smooth=0">
