--- a/tmpl/forecastio.tmpl
+++ b/tmpl/forecastio.tmpl
@@ -1,11 +1,15 @@
 <!-- tmpl_include name="header.tmpl" -->
-<strong>Toledo Forecast <small>(using <a href="http://forecast.io">forecast.io</a> data)</small></strong>
+<strong>Toledo Area Forecast Summaries</strong>
+<br />
+<small>(using <a href="http://forecast.io">forecast.io</a> data)</small>
 <p>
-<strong>Currently:</strong> <!-- tmpl_var name="currently_summary" --> <!-- tmpl_var name="currently_temperature" --> F
- -  <!-- tmpl_var name="currently_winddirection" --> at <!-- tmpl_var name="currently_windspeed" --> mph
-</p>
-<p>
-<strong>Next Hour:</strong> <!-- tmpl_var name="minutely_summary" -->
+<strong>Now:</strong> <!-- tmpl_var name="currently_summary" --> <!-- tmpl_var name="currently_temperature" --> F
+ -  
+<!-- tmpl_if currently_windspeed -->
+<!-- tmpl_var name="currently_winddirection" --> at <!-- tmpl_var name="currently_windspeed" --> mph
+<!-- tmpl_else -->
+<!-- tmpl_var name="currently_winddirection" --> <!-- <!-- tmpl_var name="currently_windspeed" --> -->
+<!-- /tmpl_if -->
 </p>
 <p>
 <strong>Next 24 Hours:</strong> <!-- tmpl_var name="hourly_summary" -->
@@ -14,18 +18,29 @@
 <strong>Next 7 Days:</strong> <!-- tmpl_var name="daily_summary" -->
 </p>
 
+<iframe id="forecast_embed" type="text/html" frameborder="0" height="245" width="100%" src="http://forecast.io/embed/#lat=<!-- tmpl_var name="toledo_latitude" -->&lon=<!-- tmpl_var name="toledo_longitude" -->&name=Toledo"> </iframe>
+
+<div data-role="collapsible-set" data-inset="false">
+
+<p>
+<strong>Minute by Minute Forecasts</strong>
+</p>
+
+<div data-role="collapsible">
+<h3>Sylvania: <small><!-- tmpl_var name="sylvania_minutely_summary" --></small></h3>
 <div style="font-size:90%; font-weight:bold;">
-<!-- tmpl_loop name="minutely_loop" -->
+<p>
+<strong>Next Hour:</strong> <!-- tmpl_var name="sylvania_minutely_summary" -->
+</p>
+<!-- tmpl_loop name="sylvania_minutely_loop" -->
 <strong><!-- tmpl_var name="time" --></strong>
 <!-- <small> - <!-- tmpl_var name="date" --></small> -->
-
 <span style="color: <!-- tmpl_var name="precipcolor" -->">
 <!-- tmpl_if precipProbability -->
  <!-- tmpl_var name="precipProbability" --> % chance of 
  <!-- tmpl_var name="precipIntensity" --> 
  <!-- tmpl_var name="precipType" --> 
 </span>
- 
 <!-- tmpl_else -->
 <span style="color: #888888;">
  <!-- tmpl_var name="precipProbability" --> % chance of precip
@@ -34,6 +49,90 @@
 <br />
 <!-- /tmpl_loop -->
 </div>
+</div>
+
+<!-- 
+<div data-role="collapsible">
+<h3>Maumee: <small><!-- tmpl_var name="maumee_minutely_summary" --></small></h3>
+<div style="font-size:90%; font-weight:bold;">
+<p>
+<strong>Next Hour:</strong> <!-- tmpl_var name="maumee_minutely_summary" -->
+</p>
+<!-- tmpl_loop name="maumee_minutely_loop" -->
+<strong><!-- tmpl_var name="time" --></strong>
+<!-- <small> - <!-- tmpl_var name="date" --></small> -->
+<span style="color: <!-- tmpl_var name="precipcolor" -->">
+<!-- tmpl_if precipProbability -->
+ <!-- tmpl_var name="precipProbability" --> % chance of 
+ <!-- tmpl_var name="precipIntensity" --> 
+ <!-- tmpl_var name="precipType" --> 
+</span>
+<!-- tmpl_else -->
+<span style="color: #888888;">
+ <!-- tmpl_var name="precipProbability" --> % chance of precip
+</span>
+<!-- /tmpl_if -->
+<br />
+<!-- /tmpl_loop -->
+</div>
+</div>
+-->
+
+<div data-role="collapsible">
+<h3>Central Toledo: <small><!-- tmpl_var name="toledo_minutely_summary" --></small></h3>
+<div style="font-size:90%; font-weight:bold;">
+<p>
+<strong>Next Hour:</strong> <!-- tmpl_var name="toledo_minutely_summary" -->
+</p>
+<!-- tmpl_loop name="toledo_minutely_loop" -->
+<strong><!-- tmpl_var name="time" --></strong>
+<!-- <small> - <!-- tmpl_var name="date" --></small> -->
+<span style="color: <!-- tmpl_var name="precipcolor" -->">
+<!-- tmpl_if precipProbability -->
+ <!-- tmpl_var name="precipProbability" --> % chance of 
+ <!-- tmpl_var name="precipIntensity" --> 
+ <!-- tmpl_var name="precipType" --> 
+</span>
+<!-- tmpl_else -->
+<span style="color: #888888;">
+ <!-- tmpl_var name="precipProbability" --> % chance of precip
+</span>
+<!-- /tmpl_if -->
+<br />
+<!-- /tmpl_loop -->
+</div>
+</div>
+
+
+<div data-role="collapsible">
+<h3>Oregon: <small><!-- tmpl_var name="oregon_minutely_summary" --></small></h3>
+<div style="font-size:90%; font-weight:bold;">
+<p>
+<strong>Next Hour:</strong> <!-- tmpl_var name="oregon_minutely_summary" -->
+</p>
+<!-- tmpl_loop name="oregon_minutely_loop" -->
+<strong><!-- tmpl_var name="time" --></strong>
+<!-- <small> - <!-- tmpl_var name="date" --></small> -->
+<span style="color: <!-- tmpl_var name="precipcolor" -->">
+<!-- tmpl_if precipProbability -->
+ <!-- tmpl_var name="precipProbability" --> % chance of 
+ <!-- tmpl_var name="precipIntensity" --> 
+ <!-- tmpl_var name="precipType" --> 
+</span>
+<!-- tmpl_else -->
+<span style="color: #888888;">
+ <!-- tmpl_var name="precipProbability" --> % chance of precip
+</span>
+<!-- /tmpl_if -->
+<br />
+<!-- /tmpl_loop -->
+</div>
+</div>
+
+
+</div>
+
+
 
 
 <!-- tmpl_include name="footer.tmpl" -->
