--- a/tmpl/wxindex.tmpl
+++ b/tmpl/wxindex.tmpl
@@ -15,7 +15,7 @@
       <li><a href="<!-- tmpl_var name="wxhome" -->/forecast.html">7-day Forecast <span class="wx-minor-text"><!-- tmpl_var name="forecast_time" --></span></a></li>
       <li><a href="<!-- tmpl_var name="wxhome" -->/hourly-forecast.html">Hourly Forecast</a></li>
       <li><a href="<!-- tmpl_var name="wxhome" -->/forecastio.html"><span class="wx-forecastio">forecast.io Info</span></a></li>
-      <li><a href="<!-- tmpl_var name="wxhome" -->/forecast-discussion.html">Forecast Discussion <span class="wx-minor-text"><!-- tmpl_var name="discussion_time" --></span></a></li>
+      <li><a href="<!-- tmpl_var name="wxhome" -->/area-forecast-discussions.html">Forecast Discussions <span class="wx-minor-text"><!-- tmpl_var name="discussion_time" --></span></a></li>
       <li><a href="<!-- tmpl_var name="wxhome" -->/convective-outlook.html">Convective Outlook</a></li>
       <li><a href="<!-- tmpl_var name="wxhome" -->/more-radars-and-maps.html">More Radars & Maps</a></li>
       <li><a href="<!-- tmpl_var name="wxhome" -->/lake-forecast.html">Lake Forecast <span class="wx-minor-text"><!-- tmpl_var name="marine_time" --></span></a></li>
