4 to 8 day conv outlk

--- a/tmpl/outlookhome.tmpl
+++ b/tmpl/outlookhome.tmpl
@@ -57,6 +57,16 @@
 </p>
 </div>
 
+<div data-role="collapsible">
+<h3>Day 4-8 Outlook</h3>
+<p>
+<div style="float:right">
+<a href="<!-- tmpl_var name="wxhome" -->/day48otlk.html" data-role="button" data-icon="arrow-r" data-inline="true" data-mini="true" data-theme="e">Day 4-8 Outlook Text</a>
+</div>
+<img src="<!-- tmpl_var name="imagehome" -->/day48prob.gif">
+</p>
+</div>
+
 </div>
 
 <!-- tmpl_include name="footer.tmpl" -->
