--- a/tmpl/header.tmpl
+++ b/tmpl/header.tmpl
@@ -5,6 +5,7 @@
   <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
   <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
   <title><!-- tmpl_var name="pagetitle" --></title>
+  <link href="/weather/favicon.ico" rel="shortcut icon" type="image/x-icon" />
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
   <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
   <script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
