--- a/tmpl/footer.tmpl
+++ b/tmpl/footer.tmpl
@@ -1,10 +1,12 @@
 
 </div> <!-- close wx-content -->
-</div>
+</div> <!-- close data-role=content -->
   
-<div data-role="footer" data-theme="f">
+<div id="footer" data-role="footer" data-theme="f">
 <center><small>page created: <!-- tmpl_var name="pagecreateddate" --></small></center>
 </div>
+
+</div> <!-- close scroll_text -->
 
 </div>
 </body>
