--- a/tmpl/header.tmpl
+++ b/tmpl/header.tmpl
@@ -10,7 +10,8 @@
   <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
   <script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
   <link rel="stylesheet" href="<!-- tmpl_var name="cssurl" -->" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+  <meta name="apple-mobile-web-app-capable" content="yes" />
 
 </head>
 
@@ -37,8 +38,9 @@
 <!-- /tmpl_if -->
 </div>
   
+<div class="scroll_text">
+
 <div data-role="content">
 
 <div id="wx-content"> 
-
 
