--- a/tmpl/links.tmpl
+++ b/tmpl/links.tmpl
@@ -1,7 +1,15 @@
 <!-- tmpl_include name="header.tmpl" -->
 
-<p><strong><ins>National Weather Service</ins></strong></p>
+<p><strong><ins>Winter Weather</ins></strong></p>
+<ul>
+<li><a href="http://tinyurl.com/ps6vxjp">Cle NWS Forecast Snowfall</a></li>
+<li><a  class="extlink" href="http://tinyurl.com/GFS-Total-Snowfall">Global Forecast System Total Snowfall Model</a></li>
+<li><a  class="extlink" href="http://www.wpc.ncep.noaa.gov/wwd/winter_wx.shtml">Weather Prediction Center Winter Weather Forecasts</a></li>
+<li><a  class="extlink" href="http://toledowinter.com">http://toledowinter.com</a></li>
+</ul>
 
+
+<p><strong><ins>National Weather Service</ins></strong></p>
 <ul>
 <li><a  class="extlink" href="http://www.spc.noaa.gov/">Storm Prediction Center</a></li>
 <li><a  class="extlink" href="http://www.erh.noaa.gov/cle/">Cleveland NWS</a></li>
@@ -15,7 +23,6 @@
 </ul>
    
 <p><strong><ins>Wunderground</ins></strong></p>
-
 <ul>
 <li><a  class="extlink" href="http://www.wunderground.com/cgi-bin/findweather/getForecast?query=tol">Toledo Express Airport</a></li>
 <li><a  class="extlink" href="http://www.wunderground.com/US/OH/Toledo/KTDZ.html">Toledo Metcalf Airport</a></li>
@@ -23,7 +30,6 @@
 </ul>
 
 <p><strong><ins>Forecast.io</ins></strong></p>
-
 <ul>
 <li><a  class="extlink" href="http://www.forecast.io">forecast.io</a></li>
 <li><a  class="extlink" href="http://www.forecast.io/lines">forecast.io/lines</a></li>
@@ -32,10 +38,12 @@
 <li><a  class="extlink" href="http://darkskyapp.com">Dark Sky iOS App</a></li>
 </ul>
 
+<!--
 <p><strong><ins>Etc</ins></strong></p>
-
 <ul>
 <li><a  class="extlink" href="http://toledotalk.com/cgi-bin/tt.pl/article/84940/Monitoring_Severe_Weather">Toledo Talk - Monitoring Severe Weather</a></li>
 </ul>
+-->
+
 
 <!-- tmpl_include name="footer.tmpl" -->
