--- a/tmpl/wxindex.tmpl
+++ b/tmpl/wxindex.tmpl
@@ -12,18 +12,18 @@
     <!-- /tmpl_loop -->
       <li><a href="<!-- tmpl_var name="wxhome" -->/current-conditions.html"><!-- tmpl_var name="conditions_weather" -->: <!-- tmpl_var name="conditions_temperature" --> <span class="wx-minor-text"><!-- tmpl_var name="conditions_time" --></span></a></li>
       <li><a href="<!-- tmpl_var name="wxhome" -->/radar.html">Radar</a></li>
+      <li><a href="<!-- tmpl_var name="wxhome" -->/more-radars-and-maps.html">More Radars & Maps</a></li>
       <li><a href="<!-- tmpl_var name="wxhome" -->/forecast.html">7-day Forecast <span class="wx-minor-text"><!-- tmpl_var name="forecast_time" --></span></a></li>
-      <li><a href="<!-- tmpl_var name="wxhome" -->/hourly-forecast.html">Hourly Forecast</a></li>
+      <li><a href="<!-- tmpl_var name="wxhome" -->/hourly-forecast.html">Hourly Forecast</a></li> 
       <li><a href="<!-- tmpl_var name="wxhome" -->/forecastio.html"><span class="wx-forecastio">forecast.io Info</span></a></li>
       <li><a href="<!-- tmpl_var name="wxhome" -->/area-forecast-discussions.html">Forecast Discussions <span class="wx-minor-text"><!-- tmpl_var name="discussion_time" --></span></a></li>
       <li><a href="<!-- tmpl_var name="wxhome" -->/convective-outlook.html">Convective Outlook</a></li>
-      <li><a href="<!-- tmpl_var name="wxhome" -->/more-radars-and-maps.html">More Radars & Maps</a></li>
       <li><a href="<!-- tmpl_var name="wxhome" -->/lake-forecast.html">Lake Forecast <span class="wx-minor-text"><!-- tmpl_var name="marine_time" --></span></a></li>
     <!-- tmpl_unless hazardous_outlook_exists --> 
       <li><a href="<!-- tmpl_var name="wxhome" -->/hazardous-weather-outlook.html"><span>No Hazardous Weather</span> <span class="wx-minor-text"><!-- tmpl_var name="hazardous_outlook_time" --></span></a></li> 
     <!-- /tmpl_unless -->
       <li><a href="<!-- tmpl_var name="wxhome" -->/external-links.html">External Links</a></li>
-      <li><a href="<!-- tmpl_var name="wxhome" -->/errors.html"><span class="wx-minor-text">error log</span></a></li>
+<!--      <li><a href="<!-- tmpl_var name="wxhome" -->/errors.html"><span class="wx-minor-text">error log</span></a></li> -->
     </ul>
 
 <!-- tmpl_include name="footer.tmpl" -->
