--- a/tmpl/wx-alerts-rss.tmpl
+++ b/tmpl/wx-alerts-rss.tmpl
@@ -1,7 +1,7 @@
 <rss version="2.0" xmlns:rss5="http://rss5.org/">
   <channel>
    <title>Toledo Weather</title>
-   <link>http://toledotalk.com/weather</link>
+   <link>http://toledoweather.info</link>
    <description>Toledo Weather - Maps, Forecasts, NWS Details</description>
    <pubDate><!-- tmpl_var name="pub_date" --></pubDate>
    <language>en-us</language>
