--- a/tmpl/header.tmpl
+++ b/tmpl/header.tmpl
@@ -6,8 +6,8 @@
   <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
   <title><!-- tmpl_var name="pagetitle" --></title>
 <!--  <link href="/weather/favicon.ico" rel="shortcut icon" type="image/x-icon" /> -->
-  <link href="http://toledotalk.com/weather/favicon.ico" rel="shortcut icon" type="image/ico" /> 
-  <link rel="apple-touch-icon" href="http://toledotalk.com/weather/tol-wx-60x60.png" />
+  <link href="http://toledoweather.info/favicon.ico" rel="shortcut icon" type="image/ico" /> 
+  <link rel="apple-touch-icon" href="http://toledoweather.info/tol-wx-60x60.png" />
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
   <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
   <script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
