--- a/tmpl/header.tmpl
+++ b/tmpl/header.tmpl
@@ -21,7 +21,7 @@
 
 <div data-role="page" data-theme="d"> 
 
-<div data-role="header" data-theme="b" data-position="fixed">
+<div data-role="header" data-theme="b" data-position="fixed" data-tap-toggle="false">
 <h1><!-- tmpl_var name="site_name" --></h1>
 <!-- tmpl_if refresh_button -->
   <a href="<!-- tmpl_var name="refresh_button_url" -->" data-icon="refresh" data-iconpos="notext"  onclick="location.reload(true)" class="ui-btn-right"  >Refresh</a>  
