--- a/tmpl/links.tmpl
+++ b/tmpl/links.tmpl
@@ -1,14 +1,5 @@
 <!-- tmpl_include name="header.tmpl" -->
 
-<p><strong><ins>Winter Weather</ins></strong></p>
-<ul>
-<li><a href="http://tinyurl.com/ps6vxjp">Cle NWS Forecast Snowfall</a></li>
-<li><a  class="extlink" href="http://tinyurl.com/GFS-Total-Snowfall">Global Forecast System Total Snowfall Model</a></li>
-<li><a  class="extlink" href="http://www.wpc.ncep.noaa.gov/wwd/winter_wx.shtml">Weather Prediction Center Winter Weather Forecasts</a></li>
-<li><a  class="extlink" href="http://toledowinter.com">http://toledowinter.com</a></li>
-</ul>
-
-
 <p><strong><ins>National Weather Service</ins></strong></p>
 <ul>
 <li><a  class="extlink" href="http://www.spc.noaa.gov/">Storm Prediction Center</a></li>
@@ -20,6 +11,7 @@
 <li><a  class="extlink" href="http://forecast.weather.gov/MapClick.php?lat=41.6639383&lon=-83.55521199999998&site=all&smap=1&searchresult=Toledo%2C%20OH%2C%20USA#.Ub-dKOdwqSq">Toledo Suburban Airport</a></li>
 <li><a  class="extlink" href="http://www.weather.gov/view/validProds.php?prod=LSR&amp;node=KCLE">Local Storm Report</a></li>
 <li><a  class="extlink" href="http://radar.weather.gov/radar.php?rid=cle&product=NTP&overlay=11101111&loop=no">Radar Esstimated Rainfall Amounts</a></li>
+<li><a  class="extlink" href="http://www.cpc.ncep.noaa.gov/products/predictions/610day/">6 to 10 Day Precip and Temp Outlooks</a></li>
 </ul>
    
 <p><strong><ins>Wunderground</ins></strong></p>
@@ -38,12 +30,12 @@
 <li><a  class="extlink" href="http://darkskyapp.com">Dark Sky iOS App</a></li>
 </ul>
 
-<!--
-<p><strong><ins>Etc</ins></strong></p>
+<p><strong><ins>Winter Weather</ins></strong></p>
 <ul>
-<li><a  class="extlink" href="http://toledotalk.com/cgi-bin/tt.pl/article/84940/Monitoring_Severe_Weather">Toledo Talk - Monitoring Severe Weather</a></li>
+<li><a href="http://tinyurl.com/ps6vxjp">Cle NWS Forecast Snowfall</a></li>
+<li><a  class="extlink" href="http://tinyurl.com/GFS-Total-Snowfall">Global Forecast System Total Snowfall Model</a></li>
+<li><a  class="extlink" href="http://www.wpc.ncep.noaa.gov/wwd/winter_wx.shtml">Weather Prediction Center Winter Weather Forecasts</a></li>
+<li><a  class="extlink" href="http://toledowinter.com">ToledoWinter.com</a></li>
 </ul>
--->
-
 
 <!-- tmpl_include name="footer.tmpl" -->
