--- a/tmpl/links.tmpl
+++ b/tmpl/links.tmpl
@@ -8,7 +8,7 @@
 <li><a  class="extlink" href="http://www.crh.noaa.gov/dtx/">Detroit/Pontiac NWS</a></li>
 <li><a  class="extlink" href="http://forecast.weather.gov/MapClick.php?lat=41.5924053&amp;lon=-83.80837989999998&amp;site=all&amp;smap=1&amp;searchresult=Toledo%20Express%20Airport%2C%20Swanton%2C%20OH%2043558%2C%20USA%23.Ub-a_OdwqSo">Toledo Express Airport</a></li>
 <li><a  class="extlink" href="http://forecast.weather.gov/MapClick.php?lat=41.556996&lon=-83.62715700000001&site=all&smap=1&searchresult=Perrysburg%2C%20OH%2C%20USA#.Ub-duedwqSo">Toledo Executive Airport</a></li>
-<li><a  class="extlink" href="http://forecast.weather.gov/MapClick.php?lat=41.6639383&lon=-83.55521199999998&site=all&smap=1&searchresult=Toledo%2C%20OH%2C%20USA#.Ub-dKOdwqSq">Toledo Suburban Airport</a></li>
+<li><a  class="extlink" href="http://forecast.weather.gov/MapClick.php?lat=41.7359&lon=-83.6533">Toledo Suburban Airport</a></li>
 <li><a  class="extlink" href="http://www.weather.gov/view/validProds.php?prod=LSR&amp;node=KCLE">Local Storm Report</a></li>
 <li><a  class="extlink" href="http://radar.weather.gov/radar.php?rid=cle&product=NTP&overlay=11101111&loop=no">Radar Esstimated Rainfall Amounts</a></li>
 <li><a  class="extlink" href="http://www.cpc.ncep.noaa.gov/products/predictions/610day/">6 to 10 Day Precip and Temp Outlooks</a></li>
