amazon alexa echo flash briefing support

--- a/tmpl/forecastio.tmpl
+++ b/tmpl/forecastio.tmpl
@@ -1,7 +1,7 @@
 <!-- tmpl_include name="header.tmpl" -->
 <strong>Toledo Area Forecast Summaries</strong>
 <br />
-<small>(using <a href="http://forecast.io">forecast.io</a> data)</small>
+<small>(using <a href="https://forecast.io">forecast.io</a> data)</small>
 <p>
 <strong>Now:</strong> <!-- tmpl_var name="currently_summary" --> <!-- tmpl_var name="currently_temperature" --> F
  -  
@@ -18,7 +18,7 @@
 <strong>Next 7 Days:</strong> <!-- tmpl_var name="daily_summary" -->
 </p>
 
-<iframe id="forecast_embed" type="text/html" frameborder="0" height="245" width="100%" src="http://forecast.io/embed/#lat=<!-- tmpl_var name="toledo_latitude" -->&lon=<!-- tmpl_var name="toledo_longitude" -->&name=Toledo"> </iframe>
+<iframe id="forecast_embed" type="text/html" frameborder="0" height="245" width="100%" src="https://forecast.io/embed/#lat=<!-- tmpl_var name="toledo_latitude" -->&lon=<!-- tmpl_var name="toledo_longitude" -->&name=Toledo"> </iframe>
 
 <div data-role="collapsible-set" data-inset="false">
 
