--- a/tmpl/header.tmpl
+++ b/tmpl/header.tmpl
@@ -8,9 +8,9 @@
 <!--  <link href="/weather/favicon.ico" rel="shortcut icon" type="image/x-icon" /> -->
   <link href="http://toledoweather.info/favicon.ico" rel="shortcut icon" type="image/ico" /> 
   <link rel="apple-touch-icon" href="http://toledoweather.info/tol-wx-60x60.png" />
-  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
-  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-  <script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
+  <link rel="stylesheet" href="https://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
+  <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <script src="https://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
   <link rel="stylesheet" href="<!-- tmpl_var name="cssurl" -->" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
   <meta name="apple-mobile-web-app-capable" content="yes" />
