--- a/tmpl/moreradarsmaps.tmpl
+++ b/tmpl/moreradarsmaps.tmpl
@@ -5,21 +5,24 @@
 <div data-role="collapsible" data-collapsed="false">
 <h3>Hi Def Radar</h3>
 <p>
-<img src="http://radblast-aws.wunderground.com/cgi-bin/radar/WUNIDS_map?station=DTW&brand=wui&num=6&delay=15&type=TR0&frame=0&scale=1.000&noclutter=0&t=1373479846&lat=0&lon=0&label=you&showstorms=0&map.x=400&map.y=240&centerx=400&centery=240&transx=0&transy=0&showlabels=1&severe=0&rainsnow=0&lightning=0&smooth=0">
+<img src="https://radblast-aws.wunderground.com/cgi-bin/radar/WUNIDS_map?station=DTW&brand=wui&num=6&delay=15&type=TR0&frame=0&scale=1.000&noclutter=0&t=1373479846&lat=0&lon=0&label=you&showstorms=0&map.x=400&map.y=240&centerx=400&centery=240&transx=0&transy=0&showlabels=1&severe=0&rainsnow=0&lightning=0&smooth=0">
 </p>
 </div>
 
 <div data-role="collapsible">
 <h3>Local Radar</h3>
 <p>
-<img src="http://radblast-mi.wunderground.com/cgi-bin/radar/WUNIDS_map?station=DTX&brand=wui&num=6&delay=15&type=N0R&frame=0&scale=0.750&noclutter=0&t=1305206220&lat=41.58666611&lon=-83.80777740&label=Toledo+Express%2C+OH&showstorms=0&map.x=400&map.y=240&centerx=454&centery=163&transx=54&transy=-77&showlabels=1&severe=1&rainsnow=0&lightning=0&smooth=0">
+<img src="https://radblast-mi.wunderground.com/cgi-bin/radar/WUNIDS_map?station=DTX&brand=wui&num=6&delay=15&type=N0R&frame=0&scale=0.750&noclutter=0&t=1305206220&lat=41.58666611&lon=-83.80777740&label=Toledo+Express%2C+OH&showstorms=0&map.x=400&map.y=240&centerx=454&centery=163&transx=54&transy=-77&showlabels=1&severe=1&rainsnow=0&lightning=0&smooth=0">
 </p>
 </div>
 
 <div data-role="collapsible">
 <h3>Regional Radar</h3>
 <p>
-<img src="http://images.intellicast.com/WxImages/RadarLoop/day_None_anim.gif">
+<a href="http://images.intellicast.com/WxImages/RadarLoop/day_None_anim.gif">Another Regional Radar</a>
+</p>
+<p>
+<img src="https://radar.weather.gov/Conus/Loop/centgrtlakes_loop.gif">
 </p>
 </div>
 
@@ -35,7 +38,7 @@
 <p>
 <strong>Dew Point Temps</strong>
 <br />
-<img src="http://icons-ak.wxug.com/data/640x480/2xus_dp.gif">
+<img src="https://icons-ak.wxug.com/data/640x480/2xus_dp.gif">
 </p>
 </div>
 
@@ -60,7 +63,7 @@
 <div data-role="collapsible">
 <h3>Severe Weather Map</h3>
 <p>
-<img src="http://icons-ak.wxug.com/data/640x480/2xmw_severe.gif">
+<img src="https://icons-ak.wxug.com/data/640x480/2xmw_severe.gif">
 <br />
 <a target="_blank" href="http://www.wunderground.com/severe.asp?region=mw&setprefs.0.key=SVRMAP&setprefs.0.val=mw%23gotoMap">Wunderground.com Link</a>
 <br />
