--- a/tmpl/radar.tmpl
+++ b/tmpl/radar.tmpl
@@ -5,12 +5,18 @@
 <div data-role="collapsible" data-collapsed="false">
 <h3>Ohio & Indiana</h3>
 <p>
+<a href="https://radar.weather.gov/ridge/lite/N0R/IWX_loop.gif">Animated Radar</a>
+</p>
+<p>
 <img src="http://climate.cod.edu/data/satellite/1km/Indiana_Ohio/current/Indiana_Ohio.rad.gif">
 </p>
 </div>
 
 <div data-role="collapsible">
 <h3>Michigan</h3>
+<p>
+<a href="https://radar.weather.gov/ridge/lite/N0R/DTX_loop.gif">Animated Radar</a>
+</p>
 <p>
 <img src="http://climate.cod.edu/data/satellite/1km/Michigan/current/Michigan.rad.gif">
 </p>
